--- a/templates/loan/stallion_advance_form.html
+++ b/templates/loan/stallion_advance_form.html
@@ -179,6 +179,18 @@
 
                                     </div>
                                     <div class="form-group">
+                                            <label for="" class="col-sm-3 control-label">Loan Tenure</label>
+                                            <div class="col-sm-5">
+                                                <select class=" select2 form-control" required="required" name="loan_tenure">
+                                                    <option value="1" selected="selected"></option>
+                                                    <option value="2">1 month</option>
+                                                    <option value="3">2 months</option>
+                                                    <option value="4">3 months</option>
+                                                    <option value="5">4 months</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    <div class="form-group">
                                         <div class="col-sm-5">
                                             <input type="hidden" id="package_list" name="package_list" value="Stallion Advance">
                                         </div>
