--- a/templates/loan/stallion_allowee_form.html
+++ b/templates/loan/stallion_allowee_form.html
@@ -165,6 +165,18 @@
                                         </div>
                                     </div>
                                     <div class="form-group">
+                                            <label for="" class="col-sm-3 control-label">Loan Tenure</label>
+                                            <div class="col-sm-5">
+                                                <select class=" select2 form-control" required="required" name="loan_tenure">
+                                                    <option value="1" selected="selected"></option>
+                                                    <option value="2">1 month</option>
+                                                    <option value="3">2 months</option>
+                                                    <option value="4">3 months</option>
+                                                    <option value="5">4 months</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                    <div class="form-group">
                                         <div class="col-sm-5">
                                             <input class="form-control" name="allowee" type="hidden" value="19800" id="">
                                         </div>
