--- a/templates/payment.html
+++ b/templates/payment.html
@@ -30,19 +30,20 @@
                             <div class="panel-heading">
                                 <h6 class="panel-title">
 
-                                    Loans Pending Disbursement
+                                    Loans Payment
                                 </h6>
 
-                                <div class="heading-elements">
-                                    <a href="create.html" class="btn btn-info btn-sm">Add Loan</a>
-                                </div>
+                                
                             </div>
                             <div class="panel-body table-responsive">
                                 <table id="data-table" class="table table-striped table-condensed table-hover">
                                     <thead>
                                         <tr>
                                             <th>#</th>
-                                            <th>repayment Date</th>
+                                            <th>Repayment Date</th>
+                                            <th>Loan Owing</th>
+                                            <th>Monthly Payment</th>
+                                            <th>Loan paid</th>
                                     
                                         </tr>
                                     </thead>
@@ -50,32 +51,37 @@
                                     
                                     <tbody>
                                     <tr>
-                        <form action = "" method = 'POST'>
-                            {% csrf_token %}
+                        
                         <td></td>
-                        <td>{{repayment_details}}</td>
+                        <td>{{repayment_details.repayment_date}}</td>
+                        <td>{{repayment_details.loan_owed}}</td>
+                        <td>{{repayment_details.per_monthly_payment}}</td>
+                        <td>{{repayment_details.repaid}}</td>
+
                         
-                        
-                        <input type="hidden" id="username" name="username" value="{{user_loan_details.user.username}}">
-                        
-                        
-                        
-                        <td>
-                            <button type="submit" class="btn bg-success btn-block" id="action" disabled>Make Payment
-                            <i class="icon-arrow-right14 position-right"></i></button>
-                        </td>
-                    
-                            
-                                            
-                    </form>
                     </tr>
                     </tbody>
                   
                   
                                 </table>
-                                <div class="form-group">
-                       
-                    </div>
+                                <br>
+                                <br>
+                                <form action = "" method = 'POST'>
+                                    {% csrf_token %}
+                                    <div class="form-group has-feedback has-feedback-left">
+                                        <input type="text" name="amount" class="form-control" placeholder="enter total or monthly amount only" value="" required>
+                                        <div class="form-control-feedback">
+                                            <i class="icon-envelop text-muted mb-3"></i>
+                                        </div>
+                                    </div>
+                                    <input type="hidden" id="username" name="username" value="{{user_loan_details.user.username}}">
+                                    
+                                    <td>
+                                        <button type="submit" class="btn bg-success btn-block" id="action" enable> Submit
+                                        <i class="icon-arrow-right14 position-right"></i></button>
+                                    </td>      
+                                                        
+                                    </form>
                             </div>
                             <!-- /.panel-body -->
                         </div>
