newly added feature

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,7 +6,7 @@
                         <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                     </a>
                 </li>
-                <li class="treeview ">
+               <!--<li class="treeview ">
                     <a href="{% url 'dashboard' %}" class="has-ul legitRipple">
                         <i class="fa fa-users"></i> <span>Borrowers</span>
                     </a>
@@ -14,25 +14,25 @@
                         <li><a href="" class="legitRipple"><i
                                     class="fa fa-circle-o"></i> View Borrowers
                             </a></li>
-                        <!--<li>
+                        <li>
                             <a href="{% url 'borrower_pending' %}" class="legitRipple"><i
                                     class="fa fa-circle-o"></i> Borrowers Pending
                                 <span class="pull-right-container">
                                     <span class="label label-danger pull-right">0</span>
                                 </span>
                             </a>
-                        </li>-->
+                        </li>
                         <li><a href="{% url 'borrower_create' %}" class="legitRipple"><i
                                     class="fa fa-circle-o"></i> Add Borrower
                             </a></li>
-                        <!--<li><a href="{% url 'borrower_group_data' %}" class="legitRipple"><i
+                       <li><a href="{% url 'borrower_group_data' %}" class="legitRipple"><i
                                     class="fa fa-circle-o"></i> View Borrower Groups
                             </a></li>
                         <li><a href="{% url 'borrower_group_create' %}" class="legitRipple"><i
                                     class="fa fa-circle-o"></i> Add Borrower Group
-                            </a></li>-->
+                            </a></li>
                     </ul>
-                </li>
+                </li>-->
                 <li class="treeview">
                     <a href="{% url 'dashboard' %}" class="has-ul legitRipple">
                         <i class="fa fa-money"></i> <span>Loans</span>
@@ -133,13 +133,11 @@
                         <<li><a href="#" class="legitRipple"><i
                                     class="fa fa-circle-o"></i> Repayments
                             </a></li>
-                        <li><a href="#" class="legitRipple"><i
-                                    class="fa fa-circle-o"></i> Add Repayment
-                            </a></li>
+                       
 
                     </ul>
                 </li>
-                <li class="treeview ">
+               <!-- <li class="treeview ">
                     <a href="{% url 'dashboard' %}" class="has-ul legitRipple">
                         <i class="fa fa-list"></i> <span>Collateral</span>
                     </a>
@@ -165,7 +163,7 @@
                             </a></li>
 
                     </ul>
-                </li>
+                </li>-->
                 <li class="treeview ">
                     <a href="{% url 'dashboard' %}tml" class="has-ul legitRipple">
                         <i class="fa fa-users"></i> <span>Users</span>
