--- a/templates/income_details.html
+++ b/templates/income_details.html
@@ -30,59 +30,32 @@
                             <div class="panel-heading">
                                 <h6 class="panel-title">
 
-                                    Loans Payment
+                                    Income Details
                                 </h6>
 
                                 
                             </div>
-                            <div class="panel-body table-responsive">
-                                <table id="data-table" class="table table-striped table-condensed table-hover">
-                                    <thead>
-                                        <tr>
-                                            <th>#</th>
-                                            <th>Repayment Date</th>
-                                            <th>Loan Owing</th>
-                                            <th>Monthly Payment</th>
-                                            
-                                    
-                                        </tr>
-                                    </thead>
-                                    
-                                    
-                                    <tbody>
-                                    <tr>
-                        
-                        <td></td>
-                        <td>{{repayment_details.repayment_date}}</td>
-                        <td>{{repayment_details.loan_owed}}</td>
-                        <td>{{repayment_details.per_monthly_payment}}</td>
-                       
+                            
+                                
+                                <br>
+                                <br>
 
-                        
-                    </tr>
-                    </tbody>
-                  
-                  
-                                </table>
-                                <br>
-                                <br>
-                                <form action = "" method = 'POST'>
+                                <form action = "{% url 'process_eligible_loan' user.id %}" method = 'POST'>
                                     {% csrf_token %}
                                     <div class="form-group has-feedback has-feedback-left">
-                                        <input type="text" name="amount" class="form-control" placeholder="enter total or monthly amount only" value="" required>
+                                        <input type="text" name="monthly_income" class="form-control" placeholder="Enter your income or monthly turnover or salary" value="" required>
                                         <div class="form-control-feedback">
                                             <i class="icon-envelop text-muted mb-3"></i>
                                         </div>
                                     </div>
                                     <input type="hidden" id="username" name="username" value="{{user_loan_details.user.username}}">
                                     
-                                    <td>
-                                        <button type="submit" class="btn bg-success btn-block" id="action" enable> Submit
+                                 
+                                        <button type="submit" class="btn bg-success btn-block" id="action" enable> Next
                                         <i class="icon-arrow-right14 position-right"></i></button>
-                                    </td>      
+                                        
                                                         
-                                    </form>
-                            </div>
+                                </form>
                             <!-- /.panel-body -->
                         </div>
                         <!-- /.box -->
