--- a/templates/loan_status.html
+++ b/templates/loan_status.html
@@ -42,7 +42,7 @@
                                     <thead>
                                         <tr>
                                             <th>#</th>
-                                            <th>Disbursable Date</th>
+                                            <th>Disbursement Date</th>
                                             <th>Principal</th>
                                             <th>Your Category</th>
                                             <th>Income</th>
