--- a/templates/client.html
+++ b/templates/client.html
@@ -45,16 +45,13 @@
                         <<li><a href="#" class="legitRipple"><i
                                     class="fa fa-circle-o"></i> Repayments
                             </a></li>
-                        <li><a href="#" class="legitRipple"><i
-                                    class="fa fa-circle-o"></i> Add Repayment
-                            </a></li>
 
                     </ul>
                 </li>
                
                 <li class="">
-                    <a href="{% url 'settings' %}" class="legitRipple">
-                        <i class="fa fa-cog"></i> <span>Settings</span>
+                    <a href="#" class="legitRipple">
+                        <i class="fa fa-cog"></i> <span>Contact Us</span>
                     </a>
                 </li>
             </ul>
