changes made to disbursement date

--- a/templates/client.html
+++ b/templates/client.html
@@ -42,7 +42,7 @@
                         <i class="fa fa-dollar"></i> <span>Repayments</span>
                     </a>
                     <ul class="treeview-menu hidden-ul">
-                        <<li><a href="#" class="legitRipple"><i
+                        <<li><a href="{% url 'client_repayment_history' user.id %}" class="legitRipple"><i
                                     class="fa fa-circle-o"></i> Repayments
                             </a></li>
 
