--- a/templates/admin.html
+++ b/templates/admin.html
@@ -130,7 +130,7 @@
                         <i class="fa fa-dollar"></i> <span>Repayments</span>
                     </a>
                     <ul class="treeview-menu hidden-ul">
-                        <li><a href="#" class="legitRipple"><i
+                        <li><a href="{% url 'repayment' %}" class="legitRipple"><i
                                     class="fa fa-circle-o"></i> Repayments
                             </a></li>
                     </ul>
