changes made on repayment

--- a/templates/loan/data-status=loan_disbursed.html
+++ b/templates/loan/data-status=loan_disbursed.html
@@ -65,7 +65,7 @@
                         <td>{{loan.disbursement_date}}</td>
                         <td>{{loan.user_category}}</td>
                         <td>{{loan.package_list}}</td>
-                        <td>{{ loan.monthly_income }}</td>
+                        <td>{{ loan.monthly_salary }}</td>
                         <td>{{loan.bank_name}}</td>
                         <td>{{loan.bvn}}</td>
                                             <input type="hidden" id="package_list" name="pk" value="{{loan.pk}}">
