--- a/templates/payment.html
+++ b/templates/payment.html
@@ -56,6 +56,7 @@
                         <td>{{repayment_details.repayment_date}}</td>
                         <td>{{repayment_details.loan_owed}}</td>
                         <td>{{repayment_details.per_monthly_payment}}</td>
+                        <td>{{res}}</td>
                        
 
                         
