--- a/templates/loan/loan_application/data.html
+++ b/templates/loan/loan_application/data.html
@@ -70,7 +70,8 @@
                             <span class="label label-success">Approved</span>
                             {% endif %}
                         </td>
-                        <td>{{loan.bank_statement}}</td>
+                        <td><a class="btn btn-primary" href="{{loan.bank_statement.bank_statement.url}}" role="button">Click to download</a></td> 
+                        
                         <td>{{loan.user_category}}</td>
                         <td>{{loan.bank_name}}</td>
                         <td>{{loan.bvn}}</td>
