--- a/templates/loan/stallion_fees_form.html
+++ b/templates/loan/stallion_fees_form.html
@@ -35,6 +35,36 @@
 
                                 </div>
                             </div>
+                            {% if successful_submit %}
+                                <script type= "text/javascript">
+                                $(document).ready(function(){
+                                    $("#StallionAlloweeModal").modal('show');
+                                });
+                                </script>
+
+                            {% endif %}
+
+                            <div class="modal fade" id="StallionAlloweeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-centered" role="document">
+                                      <div class="modal-content">
+                                        <div class="modal-header">
+                                          <h5 class="modal-title" id="StallionAlloweeModalLongTitle"> ELIGIBLE LOAN</h5>
+                                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                          </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <p> <strong>Your eligible loan is:</strong>
+                                                 <h4>N{{eligible_loan}}</h4></p>
+                                        
+                                        </div>
+                                        <div class="modal-footer">
+                                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                          
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
                             <form method="POST" action="" accept-charset="UTF-8" class="form-horizontal" enctype="multipart/form-data"
                                 id="loan_form">
                                 {% csrf_token %}
