--- a/templates/payment.html
+++ b/templates/payment.html
@@ -43,6 +43,7 @@
                                             <th>Repayment Date</th>
                                             <th>Loan Owing</th>
                                             <th>Monthly Payment</th>
+                                            <th>Total To Pay</th>
                                             
                                     
                                         </tr>
@@ -56,7 +57,7 @@
                         <td>{{repayment_details.repayment_date}}</td>
                         <td>{{repayment_details.loan_owed}}</td>
                         <td>{{repayment_details.per_monthly_payment}}</td>
-                        <td>{{res}}</td>
+                        <td>{{repayment_details.user_loan.total_payable}}</td>
                        
 
                         
@@ -67,21 +68,57 @@
                                 </table>
                                 <br>
                                 <br>
+
                                 <form   method='POST'  action="{% url 'make_payment' user.id %}" id="paymentForm">
                                     {% csrf_token %}
 
                                     <div class="form-group has-feedback has-feedback-left">
                                       <label for="amount">Amount</label>
-                                      <input type="text" name="amount" class="form-control" id="amount" required />
-                                        <div class="form-control-feedback">
-                                            <i class="icon-envelop text-muted mb-3"></i>
+                                        <div >
+                                            <input type="text" name="amount" class="form-control" id="amount" required />
+                                                
                                         </div>
+                                        
                                       <br>
                                     </div>
-
-
                                     <div class="form-submit">
-                                      <button type="submit" > Pay </button>
+                                        <button type="submit" class="btn btn-primary pull-left">Pay</button>
+                                    </div>
+                                  </form>
+                                  
+                                  <br>
+                                  <br>
+                                  <br>
+
+                                  <form   method='POST'  action="{% url 'make_payment' user.id %}" id="paymentForm">
+                                    {% csrf_token %}
+                                    
+                                        <div class="form-group">
+                                            <div class="col-sm-1">
+                                                <input type="hidden" id="amount" name="amount" value="{{ repayment_details.per_monthly_payment }}">
+                                            </div>
+
+                                        </div>
+                                    <div class="form-submit">
+                                        <button type="submit" class="btn btn-primary pull-left">Pay Monthly Amount</button>
+                                    </div>
+                                   
+                                  </form>
+
+
+                                  <br>
+                                  <br>
+                                  <br>
+                                  <form   method='POST'  action="{% url 'make_payment' user.id %}" id="paymentForm">
+                                    {% csrf_token %}
+                                    <div class="form-group">
+                                        <div class="col-sm-1">
+                                            <input type="hidden" id="amount" name="amount" value="{{ repayment_details.per_monthly_payment }}">
+                                        </div>
+
+                                    </div>
+                                    <div class="form-submit">
+                                        <button type="submit" class="btn btn-primary pull-left">Pay Total Amount</button>
                                     </div>
                                    
                                   </form>
