--- a/templates/payment.html
+++ b/templates/payment.html
@@ -128,5 +128,35 @@
                             <!-- /.panel-body -->
                         </div>
                         <!-- /.box -->
+                        {% if is_paid == True %}
+                                <script type= "text/javascript">
+                                $(document).ready(function(){
+                                    $("#ConfirmPaymentModal").modal('show');
+                                });
+                                </script>
+
+                            
+
+                            <div class="modal fade" id="ConfirmPaymentModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-centered" role="document">
+                                      <div class="modal-content">
+                                        <div class="modal-header">
+                                          <h5 class="modal-title" id="StallionAlloweeModalLongTitle"> Payment Alert </h5>
+                                          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                          </button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <p> <strong><h4>Payment of {{amount}} was succesful</h4></p></strong>
+                                                 
+                                        </div>
+                                        <div class="modal-footer">
+                                          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                          
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+                            {% endif %}
                     </section>
        {% endblock content %}
