--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -31,7 +31,7 @@
                                 <div class="panel panel-body bg-blue-400 has-bg-image">
                                     <div class="media no-margin">
                                         <div class="media-body">
-                                            <h3 class="no-margin">8</h3>
+                                            <h3 class="no-margin">{{total_borrowers}}</h3>
                                             <span class="text-uppercase text-size-mini">Total Borrowers</span>
                                         </div>
 
