changes made on admin dashboard

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -45,7 +45,7 @@
                                 <div class="panel panel-body bg-indigo-400 has-bg-image">
                                     <div class="media no-margin">
                                         <div class="media-body">
-                                            <h3 class="no-margin"> $5,015,000.00 </h3>
+                                            <h3 class="no-margin"> &#8358;{{sum_of_loan}} </h3>
                                             <span class="text-uppercase text-size-mini">Loans Released</span>
                                         </div>
                                         <div class="media-right media-middle">
@@ -58,7 +58,7 @@
                                 <div class="panel panel-body bg-success-400 has-bg-image">
                                     <div class="media no-margin">
                                         <div class="media-body">
-                                            <h3 class="no-margin"> $6,011,315.25 </h3>
+                                            <h3 class="no-margin"> &#8358;{{sum_of_paid_amount}} </h3>
                                             <span class="text-uppercase text-size-mini">Payments</span>
                                         </div>
                                         <div class="media-right media-middle">
@@ -71,7 +71,7 @@
                                 <div class="panel panel-body bg-danger-400 has-bg-image">
                                     <div class="media no-margin">
                                         <div class="media-body">
-                                            <h3 class="no-margin"> $6,022,500.00 </h3>
+                                            <h3 class="no-margin"> &#8358;0.00 </h3>
                                             <span class="text-uppercase text-size-mini">Due Amount</span>
                                         </div>
                                         <div class="media-right media-middle">
@@ -135,7 +135,7 @@
                                             <div class="row text-center">
                                                 <div class="col-md-4">
                                                     <div class="content-group">
-                                                        <h5 class="text-semibold no-margin">$0.00 </h5>
+                                                        <h5 class="text-semibold no-margin">&#8358;0.00 </h5>
 
                                                         <span class="text-muted text-size-small">Today</span>
                                                     </div>
@@ -143,14 +143,14 @@
 
                                                 <div class="col-md-4">
                                                     <div class="content-group">
-                                                        <h5 class="text-semibold no-margin">$0.00 </h5>
+                                                        <h5 class="text-semibold no-margin">&#8358;0.00 </h5>
                                                         <span class="text-muted text-size-small">Last Week</span>
                                                     </div>
                                                 </div>
 
                                                 <div class="col-md-4">
                                                     <div class="content-group">
-                                                        <h5 class="text-semibold no-margin">$6,146,104.25 </h5>
+                                                        <h5 class="text-semibold no-margin">&#8358;0.00 </h5>
                                                         <span class="text-muted text-size-small">This Month</span>
                                                     </div>
                                                 </div>
