--- a/templates/client.html
+++ b/templates/client.html
@@ -2,13 +2,13 @@
         <div class="category-content no-padding">
             <ul class="navigation navigation-main navigation-accordion">
                 <li class=" active ">
-                    <a href="{% url 'dashboard' %}" class="legitRipple">
+                    <a href="{% url 'dashboard_client' %}" class="legitRipple">
                         <i class="fa fa-dashboard"></i> <span>Dashboard</span>
                     </a>
                 </li>
                 
                 <li class="treeview">
-                    <a href="{% url 'dashboard' %}" class="has-ul legitRipple">
+                    <a href="{% url 'dashboard_client' %}" class="has-ul legitRipple">
                         <i class="fa fa-money"></i> <span>Loans</span>
                     </a>
                     <ul class="treeview-menu hidden-ul">
