--- a/templates/loan_status.html
+++ b/templates/loan_status.html
@@ -18,7 +18,7 @@
                     </div>
                     <div class="breadcrumb-line">
                         <ul class="breadcrumb">
-                            <li><a href="{% url 'dashboard' %}"><i class="icon-home2 position-left"></i> Home</a></li>
+                            <li><a href=""><i class="icon-home2 position-left"></i> Home</a></li>
                             <li class="active">Loans
                             </li>
                         </ul>
