--- a/templates/repayment/client_data.html
+++ b/templates/repayment/client_data.html
@@ -17,7 +17,7 @@
                     </div>
                     <div class="breadcrumb-line">
                         <ul class="breadcrumb">
-                            <li><a href="{% url 'dashboard' %}"><i class="icon-home2 position-left"></i> Home</a></li>
+                            <li><a href="#"><i class="icon-home2 position-left"></i> Home</a></li>
                             <li class="active">Repayments
                             </li>
                         </ul>
