--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,7 @@
     <!-- Main navbar -->
     <div class="navbar navbar-inverse bg-success">
         <div class="navbar-header">
-            <a class="navbar-brand" href="{% url 'dashboard' %}">GREEN STALLION LTD</a>
+            <a class="navbar-brand" href="">GREEN STALLION LTD</a>
 
             <ul class="nav navbar-nav visible-xs-block">
                 <li><a data-toggle="collapse" data-target="#navbar-mobile" class="legitRipple"><i
